# AWS-perimeter-guard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: DEVELOPMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  UPDATES_SUMMARY.md  advanced_manual_usage.md  implementation-plan.md
docs/tasks/: task-01-project-setup.md  task-02-domain-model.md  task-03-ports-definition.md  task-06.5-resource-relationships.md  task-09-terraform-infrastructure-old.md  task-09-terraform-infrastructure.md
infrastructure/: README.md
infrastructure/modules/scan-lambda-scheduler/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/modules/scan-role/: README.md  main.tf
infrastructure/terragrunt/: root.hcl
infrastructure/terragrunt/central_account/: terragrunt.hcl
infrastructure/terragrunt/scanned_account_dev1/: terragrunt.hcl
infrastructure/terragrunt/scanned_account_prod1/: terragrunt.hcl
src/: __init__.py  main.py
src/adapters/: __init__.py
src/adapters/inbound/: __init__.py  cli_adapter.py  lambda_handler.py
src/adapters/outbound/: __init__.py  boto3_aws_client.py  cloudwatch_logger.py  console_logger.py  csv_exporter.py
src/application/: __init__.py  scanner_service.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  resource.py  scan_result.py  web_acl.py
src/domain/value_objects/: __init__.py  resource_type.py
src/ports/: __init__.py
src/ports/outbound/: __init__.py  aws_client_port.py  logger_port.py  output_port.py
tests/: __init__.py  conftest.py  test_adapters.py  test_cli.py  test_domain.py
